# Superspeed

./: .gitignore  HELIO.md  HELIO_PRD.md  HELIO_VISION_2025.md  README.md  SUPERSPEED.md  SUPERSPEED_PRD.md  SUPERSPEED_VISION_2025.md  fix_libs.sh
AgentService/: .env.example  .gitignore  Dockerfile  README.md  requirements.txt
AgentService/app/: Consitituion.md  __init__.py  config.py  dependencies.py  main.py
Helio/: ContentView.swift  DatabaseManager.swift  Helio.entitlements  HelioApp.swift  Info.plist  KeyboardBridge.swift  SettingsView.swift
Helio.xcodeproj/: project.pbxproj
Helio/Models/: OnboardingState.swift  User.swift
Helio/Services/: AuthService.swift  SupabaseService.swift
Helio/ViewModels/: AuthViewModel.swift
HelioKeyboard/: Cargo.toml
HelioKeyboard/Headers/: helio_keyboard.h  module.modulemap
HelioKeyboard/src/: lib.rs
HelioKeyboard/src/keyboard/: paste.rs  simulate.rs
HelioTests/: HelioTests.swift
HelioUITests/: HelioUITests.swift  HelioUITestsLaunchTests.swift
Superspeed.xcodeproj/: project.pbxproj
SuperspeedApp/: ContentView.swift  DatabaseManager.swift  KeyboardBridge.swift  SettingsView.swift  Superspeed.entitlements  SuperspeedApp.swift
SuperspeedApp/Models/: OnboardingState.swift  User.swift
SuperspeedApp/Services/: AuthService.swift  SupabaseService.swift
SuperspeedApp/ViewModels/: AuthViewModel.swift
SuperspeedApp/Views/: DashboardView.swift
SuperspeedKeyboard/: Cargo.toml
SuperspeedTests/: SuperspeedTests.swift
SuperspeedUITests/: SuperspeedUITests.swift  SuperspeedUITestsLaunchTests.swift
(+40 files in other folders)
