[package]
name = "helio-keyboard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
# Modern 2025 objc2 for CoreGraphics (keyboard simulation)
objc2-core-graphics = "0.3"

# Use stable cocoa for clipboard (proven to work, plain text only)
cocoa = "0.26"
objc = "0.2"
